SALESFORCE/force-apps/deploy/main/default/objects/Exercise_X_Attendee__c/Exercise_X_Attendee__c.object-meta.xml
<CustomObject>
    <label>Exercise_X_Attendee</label>
    <nameField>
        <displayFormat>ExA-{00}</displayFormat>
        <label>Exercise_X_Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exercises_X_Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>