SALESFORCE/force-apps/deploy/main/default/objects/Exercise_X_Attendee__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <label>Attendee</label>
    <referenceTo>Attendee__c</referenceTo>
    <relationshipLabel>Exercises_X_Attendees</relationshipLabel>
    <relationshipName>Exercises_X_Attendees</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>