SALESFORCE/force-apps/deploy/main/default/objects/Exercise_X_Attendee__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery</label>
    <referenceTo>Delivery__c</referenceTo>
    <relationshipLabel>Exercises_X_Attendees</relationshipLabel>
    <relationshipName>Exercises_X_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>