SALESFORCE/force-apps/deploy/main/default/objects/Exercise_X_Attendee__c/fields/Exercise__c.field-meta.xml
<CustomField>
    <fullName>Exercise__c</fullName>
    <label>Exercise</label>
    <referenceTo>Exercise__c</referenceTo>
    <relationshipLabel>Exercises_X_Attendees</relationshipLabel>
    <relationshipName>Exercises_X_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>