SALESFORCE/force-apps/deploy/main/default/objects/Exercise_X_Attendee__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00-START</fullName>
            </value>
            <value>
                <fullName>01-WORKING</fullName>
            </value>
            <value>
                <fullName>02-LATER</fullName>
            </value>
            <value>
                <fullName>03-DONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>